--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@songodb/songodb-client",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Javascript client for interacting with the SongoDB Server API.",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/songodb/songodb-client#readme",
   "dependencies": {
+    "@songodb/mongojs": "^1.0.0",
     "axios": "^0.19.2"
   },
   "devDependencies": {
